# cactus

./: .gitignore
.github/workflows/: android-release.yml
binary/: README.md  get-latest-apk.sh
cactus-engine/: cactus_engine.h
cactus-engine/src/: init.cpp
cactus/ffi/: cactus_ffi.h
flutter/example/: .gitignore  README.md  pubspec.yaml
flutter/example/android/app/: build.gradle.kts
flutter/example/android/app/src/main/: AndroidManifest.xml
flutter/example/android/app/src/main/kotlin/com/cactuscompute/cactus_example/: EvaRecognitionService.kt  EvaVoiceInteractionService.kt  EvaVoiceInteractionSession.kt  EvaVoiceInteractionSessionService.kt  MainActivity.kt
flutter/example/android/app/src/main/kotlin/radio/geogram/eva/: EvaRecognitionService.kt  EvaVoiceInteractionService.kt  EvaVoiceInteractionSession.kt  EvaVoiceInteractionSessionService.kt  MainActivity.kt
flutter/example/android/app/src/main/res/xml/: interaction_service.xml  recognition_service.xml
flutter/example/integration_test/: rag_device_test.dart
flutter/example/lib/: app_prefs.dart  assistant_channel.dart  background_indexer.dart  cactus.dart  chat_store.dart  corpus_db.dart  document_service.dart  inference_isolate.dart  main.dart  model_catalog.dart  model_manager.dart  rag_index.dart  settings_screen.dart  system_voice.dart  update_check.dart  usearch.dart  voice_service.dart
flutter/example/native/: CMakeLists.txt  README.md  build.sh
flutter/example/native/usearch/: README.md
flutter/example/test/: widget_test.dart
flutter/example/tools/: build_model_asset.sh  transpile_model.py
